Mon Aug 26 10:16:59 2013  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* process.c (gcd_timetick_int): Renamed from gcd_timtick_int.

Sun Aug 25 21:02:15 2013  Tanaka Akira  <akr@fsij.org>

	* sizes.c (Init_sizes): Define the size of clock_t.

Sun Aug 25 01:47:47 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (BARY_SHORT_MUL): Renamed from BARY_MUL1.
	  (bary_short_mul): Renamed from bary_mul1.

Sat Aug 24 10:35:09 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_clock_gettime): The emulated clock names changed.

Fri Aug 23 22:22:07 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_clock_gettime): Add a cast to fix compile error by
	  -Werror,-Wshorten-64-to-32.

Fri Aug 23 22:12:13 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_intern): no symbol cache while initialization.

Fri Aug 23 22:07:45 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (clock_t): needs time.h.

Fri Aug 23 21:37:28 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (reduce_factors): New function.
	  (timetick2dblnum): Use reduce_factors.
	  (timetick2integer): Ditto.
	  (make_clock_result): Follow the above change.
	  (rb_clock_gettime): Ditto.

Fri Aug 23 21:00:55 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (timetick_int_t): Renamed from timetick_giga_count_t.
	  (gcd_timtick_int): Renamed from gcd_ul and make the arguments
	  timetick_giga_count_t.
	  (reduce_fraction): Make the arguments timetick_int_t.
	  (timetick2integer): Ditto.
	  (make_clock_result): Ditto.
	  (timetick2dblnum): Fix the return type.
	  (rb_clock_gettime): Use timetick_int_t.

Fri Aug 23 20:50:40 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (gcd_ul): New function.
	  (reduce_fraction): Ditto.
	  (reduce_fraction): Ditto.
	  (timetick2dblnum): Ditto.
	  (timetick2integer): Ditto.
	  (make_clock_result): Use timetick2dblnum and timetick2integer.
	  (rb_clock_gettime): Follow the make_clock_result change.

Fri Aug 23 18:39:04 2013  Koichi Sasada  <ko1@atdot.net>
