@@ -82,6 +82,7 @@ y.tab.c
 /rubicon
 /ruby
 /ruby-man.rd.gz
+/sizes.c
 /test.rb
 /tmp
 /transdb.h
